# frusablog-backend

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
app/api/: deps.py
app/api/endpoints/: auth_exceptions.py  comment.py  post.py  settings.py  user.py
app/api/endpoints/auth/: auth_bearer.py  auth_handler.py
app/config/: env.py
app/database/: db.py  errors.py  handler.py  settings.py
app/db/: models.py  setup.py
app/dto/: comment_dto.py  media_dto.py  notification_dto.py  post_dto.py  posttag_dto.py  user_dto.py
app/endpoints/: auth.py  comment.py  post.py  settings.py  user.py
app/log/: console.py
app/miscellaneous/: error_codes.py
app/models/: Models.py
app/routes/: auth.py  comment.py  media.py  notification.py  post.py  posttag.py  user.py
app/routes/providers/: auth_provider.py  comment_provider.py  media_provider.py  notification_provider.py  post_provider.py  posttag_provider.py  user_provider.py
app/schemas/: Comment.py  Post.py  User.py
app/security/: permission.py
app/services/: email.py  templating.py
app/storage/: storage.py
assets/templates/: verification.html  welcome.html
migrations/: env.py
migrations/versions/: 256fdd0c0d0a_.py  30e0cebce435_add_is_blogger_field_to_user.py  6cc8ad1090a8_add_in_newsletter_field_to_user.py  83d3a0b2e167_.py  936f509af521_.py  e178dffc001f_add_notifications_and_featured_field_to_.py  e6b84071984e_.py
